<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_is_the_total_price"
        android:textSize="24sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/et_bill"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_bill_here"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tv_service"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_your_service_using_the_drop_down_menu_below"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/spinner_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/rating"
        android:prompt="@string/service_prompt">
    </Spinner>

    <Button
        android:id="@+id/btn_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_my_tip"
        android:textSize="18sp"
        android:layout_margin="25dp"
        android:onClick="calculateTip"
        android:clickable="false"/>

    <TextView
        android:id="@+id/tv_tip"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_total"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_my_total_with_tip"
        android:onClick="calculateTotal"
        android:clickable="false"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_margin="10dp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:onClick="clear"/>

</LinearLayout>
